add factory method, parser, filter, change name Point into CustomPoint, add AbstractShape